[build-system]
requires = ["uv_build>=0.7.8,<0.8.0"]
build-backend = "uv_build"

[project]
name = "mongodb-odm"
version = "1.0.0"
description = "MongoDB-ODM, NOSQL databases in Python, designed for simplicity, compatibility, and robustness."
readme = "README.md"
requires-python = ">=3.8,<4.0"
authors = [{ name = "Nayan Biswas", email = "nayan32biswas@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]

dependencies = ["pydantic>=2.4.2", "pymongo[srv]>=4.3.3"]

[project.urls]
Documentation = "https://mongodb-odm.readthedocs.io"
Repository = "https://github.com/nayan32biswas/mongodb-odm"
Homepage = "https://github.com/nayan32biswas/mongodb-odm"
Issues = "https://github.com/nayan32biswas/mongodb-odm/issues"
Changelog = "https://mongodb-odm.readthedocs.io/en/latest/release-notes/"

[project.optional-dependencies]
dev = [
    "black>=23.9.0",
    "coverage[toml]>=7.2.2",
    "pytest>=7.2.2",
    "pytest-asyncio>=0.24.0",
    "mdx-include>=1.4.2",
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.1.4",
    "mypy==1.5.0",
    "pre-commit>=3.3.3",
    "ruff>=0.11.10",
]

[tool.uv.build-backend]
module-name = "mongodb_odm"
module-root = ""
source-include = ["tests/**", "docs_src/**", "requirements*.txt", "scripts/**"]

[tool.coverage.run]
parallel = true
data_file = "coverage/.coverage"
source = ["docs_src", "mongodb_odm"]
context = '${CONTEXT}'

[tool.coverage.report]
exclude_lines = ['if __name__ == "__main__":']
show_missing = true
sort = "-Cover"
# omit = ["tests/*.py"]

[tool.coverage.html]
show_contexts = true

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ""
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs_src.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E501", "B008", "C901", "W191"]

[tool.ruff.lint.per-file-ignores]
# "__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-third-party = ["mongodb_odm", "pymongo", "pydantic"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
